--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "cannon": "^0.6.2",
     "core-js": "^2.5.4",
+    "gsap": "^2.1.3",
     "rxjs": "~6.3.3",
+    "three": "^0.106.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
