--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gsap": "^2.1.3",
     "rxjs": "~6.3.3",
     "three": "^0.106.1",
+    "three-gltf-loader": "^1.106.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
