--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rxjs": "~6.3.3",
     "three": "^0.106.1",
     "three-gltf-loader": "^1.106.0",
+    "three-orbitcontrols": "^2.102.2",
     "three-orbitcontrols-ts": "^0.1.2",
     "three-trackballcontrols-ts": "^0.1.2",
     "tslib": "^1.9.0",
