--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-cli-ghpages": "^0.5.3",
     "cannon": "^0.6.2",
     "core-js": "^2.5.4",
+    "dat.gui": "^0.7.6",
     "gsap": "^2.1.3",
     "rxjs": "~6.3.3",
     "three": "^0.106.1",
